@@ -62,7 +62,7 @@ import org.thingsboard.server.common.data.asset.Asset;
 import org.thingsboard.server.common.data.asset.AssetProfile;
 import org.thingsboard.server.common.data.audit.ActionType;
 import org.thingsboard.server.common.data.cf.CalculatedField;
-import org.thingsboard.server.common.data.cf.configuration.Argument;
+import org.thingsboard.server.common.data.cf.configuration.ArgumentsBasedCalculatedFieldConfiguration;
 import org.thingsboard.server.common.data.debug.DebugSettings;
 import org.thingsboard.server.common.data.edge.Edge;
 import org.thingsboard.server.common.data.exception.ThingsboardErrorCode;
@@ -151,6 +151,7 @@ import org.thingsboard.server.service.solutions.data.definition.CustomerEntityDe
 import org.thingsboard.server.service.solutions.data.definition.DashboardDefinition;
 import org.thingsboard.server.service.solutions.data.definition.DashboardUserDetailsDefinition;
 import org.thingsboard.server.service.solutions.data.definition.DeviceDefinition;
+import org.thingsboard.server.service.solutions.data.definition.DeviceProfileDefinition;
 import org.thingsboard.server.service.solutions.data.definition.EdgeDefinition;
 import org.thingsboard.server.service.solutions.data.definition.EdgeEntityGroupDefinition;
 import org.thingsboard.server.service.solutions.data.definition.EmulatorDefinition;
@@ -175,7 +176,6 @@ import org.thingsboard.server.service.solutions.data.solution.SolutionTemplateLe
 import org.thingsboard.server.service.solutions.data.solution.TenantSolutionTemplateDetails;
 import org.thingsboard.server.service.solutions.data.solution.TenantSolutionTemplateInfo;
 import org.thingsboard.server.service.solutions.data.solution.TenantSolutionTemplateInstructions;
-import org.thingsboard.server.service.solutions.trendz.data.TrendzEntityType;
 import org.thingsboard.server.service.telemetry.TelemetrySubscriptionService;
 
 import java.io.BufferedReader;
@@ -198,7 +198,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
@@ -247,7 +246,6 @@ public class DefaultSolutionService implements SolutionService {
     private final UserService userService;
     private final CalculatedFieldService calculatedFieldService;
     private final TbCalculatedFieldService tbCalculatedFieldService;
-    private final TrendzSolutionService trendzSolutionService;
 
     private final TbEdgeService tbEdgeService;
     private final EntityGroupService entityGroupService;
@@ -403,20 +401,7 @@ public class DefaultSolutionService implements SolutionService {
                     }
                 }
 
-                attributesService.removeAll(tenantId, tenantId, AttributeScope.SERVER_SCOPE, List.of(
-                        toCreatedEntitiesKey(solutionId), toStatusKey(solutionId), toInstructionsKey(solutionId))
-                ).get();
-
-                Optional<AttributeKvEntry> trendzAttributeOpt = this.attributesService.find(tenantId, tenantId, AttributeScope.SERVER_SCOPE, toTrendzEntitiesKey(solutionId)).get();
-                if (trendzAttributeOpt.isPresent()) {
-                    String jsonTrendzEntityIds = trendzAttributeOpt.get().getValueAsString();
-                    Map<TrendzEntityType, Set<UUID>> trendzEntityIds = new HashMap<>(Objects.requireNonNull(JacksonUtil.fromString(jsonTrendzEntityIds, new TypeReference<Map<TrendzEntityType, Set<UUID>>>() {
-                    })));
-                    this.trendzSolutionService.deleteTrendzSolution(getSolutionsDir(), user, tenantId, solutionId, trendzEntityIds);
-
-                    attributesService.removeAll(tenantId, tenantId, AttributeScope.SERVER_SCOPE, List.of(toTrendzEntitiesKey(solutionId))).get();
-                }
-
+                attributesService.removeAll(tenantId, tenantId, AttributeScope.SERVER_SCOPE, Arrays.asList(toCreatedEntitiesKey(solutionId), toStatusKey(solutionId), toInstructionsKey(solutionId))).get();
 
                 SolutionTemplateDetails solutionTemplate = solutionsMap.get(solutionId);
                 List<String> tsKeys = solutionTemplate.getTenantTelemetryKeys();
@@ -431,7 +416,6 @@ public class DefaultSolutionService implements SolutionService {
                 if (tsKeys != null && !tsKeys.isEmpty()) {
                     attributesService.removeAll(tenantId, tenantId, AttributeScope.SERVER_SCOPE, attrKeys).get();
                 }
-
             }
         } catch (Exception e) {
             log.error("[{}][{}] Failed to delete the solution", tenantId, solutionId, e);
@@ -456,9 +440,9 @@ public class DefaultSolutionService implements SolutionService {
             }
         }
 
-        List<DeviceProfile> deviceProfiles = loadListOfEntitiesIfFileExists(solutionId, "device_profiles.json", new TypeReference<>() {
+        List<DeviceProfileDefinition> deviceProfiles = loadListOfEntitiesIfFileExists(solutionId, "device_profiles.json", new TypeReference<>() {
         });
-        deviceProfiles.addAll(loadListOfEntitiesFromDirectory(solutionId, "device_profiles", DeviceProfile.class));
+        deviceProfiles.addAll(loadListOfEntitiesFromDirectory(solutionId, "device_profiles", DeviceProfileDefinition.class));
         // Validate that entities with such name does not exist entities
         if (!deviceProfiles.isEmpty()) {
             for (DeviceProfile deviceProfile : deviceProfiles) {
@@ -510,8 +494,6 @@ public class DefaultSolutionService implements SolutionService {
     private SolutionInstallResponse doInstallSolution(User user, TenantId tenantId, String solutionId, HttpServletRequest request) {
         SolutionInstallContext ctx = new SolutionInstallContext(tenantId, solutionId, user, new TenantSolutionTemplateInstructions());
         try {
-            // Install TB configuration
-
             provisionRoles(ctx);
 
             provisionTenantDetails(ctx);
@@ -545,7 +527,17 @@ public class DefaultSolutionService implements SolutionService {
 
             provisionCalculatedFields(ctx);
 
+            launchEmulators(ctx, devices, assets);
+
             ctx.getSolutionInstructions().setDetails(prepareInstructions(ctx, request));
+
+            long ts = System.currentTimeMillis();
+            AttributeKvEntry createdEntitiesAttribute = new BaseAttributeKvEntry(new StringDataEntry(toCreatedEntitiesKey(solutionId), JacksonUtil.toString(ctx.getCreatedEntitiesList())), ts);
+            AttributeKvEntry statusAttribute = new BaseAttributeKvEntry(new BooleanDataEntry(toStatusKey(solutionId), true), ts);
+
+            TenantSolutionTemplateInstructions instructions = new TenantSolutionTemplateInstructions(ctx.getSolutionInstructions());
+            AttributeKvEntry instructionAttribute = new BaseAttributeKvEntry(new StringDataEntry(toInstructionsKey(solutionId), JacksonUtil.toString(instructions)), ts);
+            attributesService.save(tenantId, tenantId, AttributeScope.SERVER_SCOPE, Arrays.asList(createdEntitiesAttribute, statusAttribute, instructionAttribute));
 
             List<ReferenceableEntityDefinition> ruleChains = loadListOfEntitiesIfFileExists(ctx.getSolutionId(), "rule_chains.json", new TypeReference<>() {
             });
@@ -555,30 +547,6 @@ public class DefaultSolutionService implements SolutionService {
                 Thread.sleep(timeout);
                 finalUpdateRuleChains(ctx);
             }
-
-            // Install Trendz configuration
-            Map<TrendzEntityType, Set<UUID>> trendzEntityIds = this.trendzSolutionService.provisionTrendzSolution(getSolutionsDir(), ctx);
-
-
-            // Save configuration attributes
-            long ts = System.currentTimeMillis();
-            TenantSolutionTemplateInstructions instructions = new TenantSolutionTemplateInstructions(ctx.getSolutionInstructions());
-            AttributeKvEntry createdEntitiesAttribute = new BaseAttributeKvEntry(new StringDataEntry(toCreatedEntitiesKey(solutionId), JacksonUtil.toString(ctx.getCreatedEntitiesList())), ts);
-            AttributeKvEntry statusAttribute = new BaseAttributeKvEntry(new BooleanDataEntry(toStatusKey(solutionId), true), ts);
-            AttributeKvEntry instructionAttribute = new BaseAttributeKvEntry(new StringDataEntry(toInstructionsKey(solutionId), JacksonUtil.toString(instructions)), ts);
-            AttributeKvEntry createdTrendzEntitiesAttribute = new BaseAttributeKvEntry(new StringDataEntry(toTrendzEntitiesKey(ctx.getSolutionId()), JacksonUtil.toString(trendzEntityIds)), ts);
-
-            attributesService.save(tenantId, tenantId, AttributeScope.SERVER_SCOPE, Arrays.asList(
-                    createdEntitiesAttribute, statusAttribute, instructionAttribute, createdTrendzEntitiesAttribute
-            ));
-
-            // Run TB + Trendz data generation
-            Set<CompletableFuture<?>> emulatorFutures = launchEmulators(ctx, devices, assets);
-            CompletableFuture
-                    .allOf(emulatorFutures.toArray(new CompletableFuture[0]))
-                    .thenRun(() -> {
-                        this.trendzSolutionService.runTrendzSolutionDataGeneration(ctx, trendzEntityIds);
-                    });
 
             return new SolutionInstallResponse(ctx.getSolutionInstructions(), true);
         } catch (Throwable e) {
@@ -811,9 +779,8 @@ public class DefaultSolutionService implements SolutionService {
     }
 
     private void provisionDeviceProfiles(SolutionInstallContext ctx) {
-        List<DeviceProfile> deviceProfiles = loadListOfEntitiesIfFileExists(ctx.getSolutionId(), "device_profiles.json", new TypeReference<>() {
-        });
-        deviceProfiles.addAll(loadListOfEntitiesFromDirectory(ctx.getSolutionId(), "device_profiles", DeviceProfile.class));
+        List<DeviceProfileDefinition> deviceProfiles = loadListOfEntitiesIfFileExists(ctx.getSolutionId(), "device_profiles.json", new TypeReference<>() {});
+        deviceProfiles.addAll(loadListOfEntitiesFromDirectory(ctx.getSolutionId(), "device_profiles", DeviceProfileDefinition.class));
         deviceProfiles.forEach(deviceProfile -> {
             deviceProfile.setId(null);
             deviceProfile.setCreatedTime(0L);
@@ -838,8 +805,11 @@ public class DefaultSolutionService implements SolutionService {
             }
         });
 
-        deviceProfiles = deviceProfiles.stream().map(deviceProfileService::saveDeviceProfile).collect(Collectors.toList());
-        deviceProfiles.forEach(ctx::register);
+        deviceProfiles.forEach(deviceProfileDefinition -> {
+            DeviceProfile deviceProfile = new DeviceProfile(deviceProfileDefinition);
+            deviceProfile = deviceProfileService.saveDeviceProfile(deviceProfile);
+            ctx.register(deviceProfileDefinition, deviceProfile);
+        });
     }
 
     private void provisionAssetProfiles(SolutionInstallContext ctx) {
@@ -1032,7 +1002,7 @@ public class DefaultSolutionService implements SolutionService {
         }
     }
 
-    private Set<CompletableFuture<?>> launchEmulators(SolutionInstallContext ctx, Map<Device, DeviceDefinition> devicesMap, Map<Asset, AssetDefinition> assets) throws Exception {
+    private void launchEmulators(SolutionInstallContext ctx, Map<Device, DeviceDefinition> devicesMap, Map<Asset, AssetDefinition> assets) throws Exception {
         List<EmulatorDefinition> emulatorDefinitions = loadListOfEntitiesIfFileExists(ctx.getSolutionId(), "device_emulators.json", new TypeReference<>() {
         });
         Map<String, EmulatorDefinition> deviceEmulators = emulatorDefinitions.stream().collect(Collectors.toMap(EmulatorDefinition::getName, Function.identity()));
@@ -1045,10 +1015,8 @@ public class DefaultSolutionService implements SolutionService {
                 });
 
 
-        Set<CompletableFuture<?>> resultFutures = new HashSet<>();
-
         for (var entry : devicesMap.entrySet().stream().filter(e -> StringUtils.isNotBlank(e.getValue().getEmulator())).collect(Collectors.toSet())) {
-            CompletableFuture<?> deviceEmulatorFuture = DeviceEmulatorLauncher.builder()
+            DeviceEmulatorLauncher.builder()
                     .entity(entry.getKey())
                     .emulatorDefinition(deviceEmulators.get(entry.getValue().getEmulator()))
                     .oldTelemetryExecutor(emulatorExecutor)
@@ -1057,17 +1025,14 @@ public class DefaultSolutionService implements SolutionService {
                     .tbQueueProducerProvider(tbQueueProducerProvider)
                     .serviceInfoProvider(serviceInfoProvider)
                     .tsSubService(tsSubService)
-                    .build()
-                    .launch();
-
-            resultFutures.add(deviceEmulatorFuture);
+                    .build().launch();
         }
 
         Map<String, EmulatorDefinition> assetEmulators = loadListOfEntitiesIfFileExists(ctx.getSolutionId(), "asset_emulators.json", new TypeReference<List<EmulatorDefinition>>() {
         }).stream().collect(Collectors.toMap(EmulatorDefinition::getName, Function.identity()));
 
         for (var entry : assets.entrySet().stream().filter(e -> StringUtils.isNotBlank(e.getValue().getEmulator())).collect(Collectors.toSet())) {
-            CompletableFuture<?> assetEmulatorFuture = AssetEmulatorLauncher.builder()
+            AssetEmulatorLauncher.builder()
                     .entity(entry.getKey())
                     .emulatorDefinition(assetEmulators.get(entry.getValue().getEmulator()))
                     .oldTelemetryExecutor(emulatorExecutor)
@@ -1076,13 +1041,8 @@ public class DefaultSolutionService implements SolutionService {
                     .tbQueueProducerProvider(tbQueueProducerProvider)
                     .serviceInfoProvider(serviceInfoProvider)
                     .tsSubService(tsSubService)
-                    .build()
-                    .launch();
-
-            resultFutures.add(assetEmulatorFuture);
+                    .build().launch();
         }
-
-        return resultFutures;
     }
 
     protected void provisionTenantDetails(SolutionInstallContext ctx) throws Exception {
@@ -1465,21 +1425,24 @@ public class DefaultSolutionService implements SolutionService {
                     throw new ThingsboardRuntimeException();
                 }
             }
-
-            Map<String, Argument> arguments = cf.getConfiguration().getArguments();
-            arguments.forEach((key, argument) -> {
-                EntityId refEntityId = argument.getRefEntityId();
-                if (refEntityId != null) {
-                    String newId = realIds.get(refEntityId.getId().toString());
-                    if (newId != null) {
-                        argument.setRefEntityId(EntityIdFactory.getByTypeAndUuid(refEntityId.getEntityType(), newId));
-                    } else {
-                        log.error("[{}][{}] Calculated field: {} references non existing entity.", ctx.getTenantId(), ctx.getSolutionId(), cf.getName());
-                        throw new ThingsboardRuntimeException();
+            if (cf.getConfiguration() instanceof ArgumentsBasedCalculatedFieldConfiguration argBasedCfg) {
+                argBasedCfg.getArguments().forEach((key, argument) -> {
+                    EntityId refEntityId = argument.getRefEntityId();
+                    if (refEntityId != null) {
+                        if (refEntityId.getEntityType() == EntityType.TENANT) {
+                            argument.setRefEntityId(ctx.getTenantId());
+                        } else {
+                            String newId = realIds.get(refEntityId.getId().toString());
+                            if (newId != null) {
+                                argument.setRefEntityId(EntityIdFactory.getByTypeAndUuid(refEntityId.getEntityType(), newId));
+                            } else {
+                                log.error("[{}][{}] Calculated field: {} references non existing entity.", ctx.getTenantId(), ctx.getSolutionId(), cf.getName());
+                                throw new ThingsboardRuntimeException();
+                            }
+                        }
                     }
-                }
-            });
-
+                });
+            }
         });
 
         cfs = cfs.stream().map(calculatedFieldService::save).collect(Collectors.toList());
@@ -1788,7 +1751,4 @@ public class DefaultSolutionService implements SolutionService {
         return solutionId + "_" + "instructions";
     }
 
-    private String toTrendzEntitiesKey(String solutionId) {
-        return solutionId + "_trendz_entities";
-    }
 }
